--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "astro": "^2.4.5"
+    "@astrojs/tailwind": "^3.1.3",
+    "astro": "^2.5.5",
+    "tailwindcss": "^3.3.2"
   },
   "name": "woodbox",
   "description": "A Woodbox frontend App: Landing page & custom shop",
