--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "@astrojs/mdx": "^0.19.6",
     "@astrojs/tailwind": "^3.1.3",
     "astro": "^2.5.5",
+    "mdx": "^0.3.1",
     "tailwindcss": "^3.3.2"
   },
   "name": "woodbox",
